Versao Netlify atualizada

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
 <!DOCTYPE html>
-<html><head><title>MFlix</title></head><body><h1>MFlix Movie DB</h1><script src='main.js'></script></body></html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MFlix Movie Database</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1>MFlix</h1>
+  <input type="text" id="search-input" placeholder="Search movies...">
+  <button id="search-button">Search</button>
+  <div id="movies-container"></div>
+  <script src="main.js"></script>
+</body>
+</html>
