--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>MFlix Movie Database</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MongoDB Movie Database</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>MFlix</h1>
-  <input type="text" id="search-input" placeholder="Search movies...">
-  <button id="search-button">Search</button>
-  <div id="movies-container"></div>
-  <script src="main.js"></script>
+    <header>
+        <h1>MFlix Movie Database</h1>
+        <div class="search-container">
+            <input type="text" id="search-input">
+            <button id="search-button">Search</button>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div id="loading">Loading movies...</div>
+            <div id="error" class="hidden"></div>
+            <div class="movies-grid" id="movies-container"></div>
+            <div id="movie-details" class="hidden">
+                <button id="back-button">Back</button>
+                <div id="detail-content"></div>
+                <div id="comments-section">
+                    <h3>Comments</h3>
+                    <div id="comments-container"></div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <script src="main.js"></script>
 </body>
 </html>
